--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "jsdom": ">=0.2.3", 
     "o3-xml": "0.1.0"
  }, 
- "engines": { "node": ">= 0.4.0 && <= 0.6.8" },
+ "engines": { "node": ">= 0.4.0 && <= 0.6.x" },
  "main": "./dist/all.js"
 }
