--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "canvas": ">=0.8.1",
     "jsdom": ">=0.2.3", 
-    "o3-xml": "0.1.0"
+    "o3-xml": "http://nodeload.github.com/ajaxorg/node-o3-xml/tarball/master"
  }, 
  "engines": { "node": ">= 0.4.0 && < 0.7.0" },
  "main": "./dist/all.js"
